vm-builder (0.9-0ubuntu2) intrepid; urgency=low

  [Nicolas Barcet <nicolas.barcet@ubuntu.com>]
  * Added hint for more help (LP: #269323)
  * Added firstscripts plugin to fix regression on on --firstboot and --firstlogin (LP: #268957)

 -- Nicolas Barcet <nicolas.barcet@ubuntu.com>  Thu, 28 Sep 2008 23:45:02 +0200

vm-builder (0.9-0ubuntu1) intrepid; urgency=low

  [Nicolas Barcet <nicolas.barcet@ubuntu.com>]
  * Fixed regression on --ip and friends (LP: #268920)
  * Added missing dependancy on dpkg-dev (LP: #270324)
  * Fixed regression on --part (LP: #268718)
  
 -- Soren Hansen <soren@ubuntu.com>  Wed, 24 Sep 2008 09:58:35 +0200

vm-builder (0.8.1-0ubuntu3) intrepid; urgency=low

  [Soren Hansen <soren@ubuntu.com>]
  * Re-add VMWare support. (LP: #268140) 
  * Fixed sources.list generation for Ubuntu. (LP: #268155)
  * Added configuration file handling. (LP: #268170)
  * Fix up Xen support (device and configuration file creation). (LP: #268142)

 -- Soren Hansen <soren@ubuntu.com>  Tue, 09 Sep 2008 17:01:02 +0200

vm-builder (0.8.1-0ubuntu2) intrepid; urgency=low

  * Apply patch to only conditionally import libvirt. Fixes FTBFS.

 -- Soren Hansen <soren@ubuntu.com>  Thu, 04 Sep 2008 09:50:27 +0200

vm-builder (0.8.1-0ubuntu1) intrepid; urgency=low

  * Added lots of inline documentation.
  * Build documentation using epydoc.
  * Moved libvirt support to a separate plugin. (LP: #264605)
  * Deploy directly to libvirt (regression from ubuntu-vm-builder). (LP: #264604)
  * Updated debian/{copyright,control} to reflect move on Launchpad.
  * No longer a native package.

 -- Soren Hansen <soren@ubuntu.com>  Thu, 04 Sep 2008 09:33:29 +0200

vm-builder (0.8) intrepid; urgency=low

  * Rewrote the entire thing in Python.

 -- Soren Hansen <soren@ubuntu.com>  Sat, 05 Jul 2008 00:23:20 +0200

ubuntu-vm-builder (0.7~ppa2) intrepid; urgency=low

  [Thierry Carrez]
  * Patch to fix lilo prompt (fix LP: #206763)
  
  [Loic Minier]